# nanopore-analysis-pipeline

./: ADEPT.md  AGENTS.md  CLAUDE.md  CODE_REVIEW_CLAUDE.md  CODE_REVIEW_CODEX.md  CUSUM.md  Event_classification.py  README.md  Visualisation_Output.py  create_small_sample.py  pyproject.toml
tests/: test_functions.py
tests/data/: small_sample.npz  small_sample_info.json
